adding db connection
adding db connection and this commited by surendar

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -20,6 +20,18 @@ a.item {
     padding-bottom: 5em !important ;
 }
 
+.about {
+    opacity:0;
+    transform:translateY(50px);
+    transform: all 1s ease-out;
+}
+
+.about.fade-in {
+    opacity:1;
+    transform:translateY(0);
+}
+
+
 
 #event{
     background-color: #00b5ad ! important ;
