--- a/client/css/style.css
+++ b/client/css/style.css
@@ -96,7 +96,7 @@ i.right.arrow.icon.new-event{
 }
 
 
-#jumbotron , #video-heading{
+#jumbotron , #video-heading {
     width:100%;
     height:120px !important;
     padding:4em 1em 2em 1em;
@@ -114,3 +114,37 @@ i.right.arrow.icon.new-event{
     background-color: #ffffff;
 }
 
+
+#news{
+    width:100%;
+    height:60px !important;
+    padding:4em 1em;
+    background-color: #fbbd08;
+    
+}
+
+#contact {
+    padding-bottom: 0em !important;
+}
+
+.mobile-screen , {
+    display:none !important;
+}
+
+/*media query*/
+
+@media only screen and (max-width: 768px) {
+    .large-screen {
+        display:none !important;
+    }
+
+    .mobile-screen{
+        display:block !important;
+    }
+
+    .mobile-nav{
+        width:100%;
+        background-color :#00b5ad ! important;
+        padding:2px 10px;
+    }
+}
